   when necessary (another patch by Colomban Wendling, thanks).
 * data/filetypes.c:
   Sort the keyword list and remove C++ keywords.
 * data/snippets.conf:
   Add some default snippets for Python (patch by
   Colomban Wendling, thanks).
 * doc/geany.txt, doc/geany.html:
   Add Python to the list of filetypes with default global tags files.


2008-11-28  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/utils.h, src/makefile.win32, src/stash.c, src/stash.h,
   src/keyfile.c, src/Makefile.am, wscript:
   Add foreach_c_array() macro in utils.h.
   Add stash.[hc] for reading/writing GKeyFile settings and (later)
   synchronizing widgets with C variables. Currently this only
   supports boolean and integer settings.
   Replace keyfile.c SettingEntry code with new stash code.
 * src/keyfile.c:
   Make hidden prefs use stash code.


2008-11-26  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/utils.c, src/ui_utils.h, src/utils.h, src/geany.h,
   src/filetypes.c, src/main.c, src/symbols.c, src/ui_utils.c:
   Add 'Tools->Configuration Files' menu with items to open
   filetype_extensions.conf and ignore.tags. These files are also
   reloaded automatically when saved.
 - Code changes:
   Make app->configdir a realpath().
   Add ui_add_config_file_menu_item().
   Add utils_build_path(), similar to g_build_path() but (re)using a
   fixed buffer, so the result is never freed.
 * src/notebook.c:
   Make middle-clicking to close tabs and double-clicking to toggle
   widgets work also for the gap between the tab label and close
   button (shown when there are more tabs than fit on screen), and
   when middle-clicking on the close button.
 * src/keyfile.c, src/keyfile.h, src/filetypes.c, src/filetypes.h,
   src/main.c:
   Move configuration_read_filetype_extensions() to
   filetypes_read_extensions().
 * doc/geany.txt, doc/geany.html:
   Update tips for Alt/Ctrl + mouse wheel scrolling in the editor.

