@@ -26,6 +26,8 @@
    Colomban Wendling, thanks).
  * doc/geany.txt, doc/geany.html:
    Add Python to the list of filetypes with default global tags files.
+ * src/filetypes.c:
+   Fix wrongly detected PHP files as HTML if they start with HTML code.
 
 
 2008-11-28  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
